--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Networked Control Systems Lab"
 title_separator          : "-"
 name                     : &name "Takashi Tanaka"
-description              : &description ""
+description              : &description "This is a homepage of Networked Control Systems Lab at Purdue University."
 url                      : https://networked-control-systems-lab.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Networked-Control-Systems-Lab/Networked-Control-Systems-Lab.github.io"
